clusters/home/apps/openclaw/app/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openclaw
  namespace: openclaw
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: "openclaw.layertwo.dev"
    external-dns.alpha.kubernetes.io/target: "proxy-external.layertwo.dev"
    layertwo.dev/publish: "all"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`openclaw.layertwo.dev`)"
      priority: 10
      services:
      - name: openclaw
        port: 18789
